--- a/gamblerApp/src/assets/main.css
+++ b/gamblerApp/src/assets/main.css
@@ -13,6 +13,12 @@
   justify-content: center;
   align-items: center;
 }
+.buttonsContainer{
+  display: flex;  
+  justify-content: space-between;
+  width: 20em;
+
+}
 .intro{
   font-family: 'Dancing Script', cursive;
   font-size: 35px;
