--- a/gamblerApp/src/assets/main.css
+++ b/gamblerApp/src/assets/main.css
@@ -14,8 +14,11 @@
 .buttonsContainer{
   display: flex;  
   justify-content: space-between;
-  width: 20em;
+  width: 17em;
 
+}
+.pregame{
+  margin-bottom: 20px;
 }
 .intro{
   font-family: 'Dancing Script', cursive;
@@ -38,7 +41,7 @@
 }
 .buttonResults{
   width: 70px;
-  height: 70px;
+  height: 40px;
 }   
 .win{
   background-color: rgb(255, 217, 0);
